<resources>
    <string name="app_name">LineNotes</string>

    <string name="edit">편집</string>
    <string name="delete">삭제</string>
    <string name="save">저장</string>
    <string name="not_save">저장 안함</string>
    <string name="cancel">취소</string>

    <string name="empty_list">메모를 추가해보세요</string>
    <string name="enter_title">제목을 입력하세요</string>
    <string name="enter_text">메모를 입력하세요</string>
    <string name="save_confirm">변경사항을 저장할까요?</string>
    <string name="delete_confirm">메모 %d개를 삭제합니다.</string>

    <string name="created_date">만든 날짜</string>
    <string name="modified_date">수정 날짜</string>
    <string name="last_modify">마지막 수정</string>

    <string name="add_image">이미지 가져오기</string>
    <string name="camera">카메라</string>
    <string name="gallery">갤러리</string>
    <string name="link">외부 링크</string>
    <string name="link_hint">가져올 이미지의 URL을 입력하세요.</string>
    <string name="no_network">네트워크 연결이 필요합니다.</string>
    <string name="load_image">이미지를 가져오는 중입니다.</string>
    <string name="fail_image">이미지를 가져올 수 없습니다.</string>
    <string name="cancel_image">이미지 가져오기 취소</string>
</resources>
